objects/sfal__Appointment__c.object
<CustomObject>
    <description>A pre-scheduled or ad hoc meeting, typically for providing advising services.</description>
    <fields>
        <fullName>sfal__Description__c</fullName>
        <description>Comments left by an Appointment Attendee about the purpose of the Appointment.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfal__EndDateTime__c</fullName>
        <description>The Appointment&apos;s end time and date.</description>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfal__Location__c</fullName>
        <description>The Appointment&apos;s location.</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Case record this Appointment originated from.</description>
        <inlineHelpText>The associated Case record this Appointment originated from.</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Appointments (Related Case)</relationshipLabel>
        <relationshipName>CaseAppointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__RelatedSubtopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Subtopic record for this Appointment.</description>
        <inlineHelpText>The associated Subtopic record for this Appointment.</inlineHelpText>
        <label>Related Subtopic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>Appointments (Related Subtopic)</relationshipLabel>
        <relationshipName>SubtopicAppointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__RelatedTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Topic record for this Appointment.</description>
        <inlineHelpText>The associated Topic record for this Appointment.</inlineHelpText>
        <label>Related Topic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>TopicAppointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__StartDateTime__c</fullName>
        <description>The Appointment&apos;s start time and date.</description>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfal__Subtopic__c</fullName>
        <description>The subtopic of the Appointment, such as grade concern, application deadline, etc.</description>
        <label>Subtopic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Topic__c</fullName>
        <description>The topic of the Appointment, such as academic, financial aid, career, etc.</description>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Type__c</fullName>
        <description>The type of Appointment, such as &quot;Scheduled&quot; or &quot;Walk-In.&quot;</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>sfal__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Appointment Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>sfal__SALTriggerSharing__c</fullName>
        <label>SAL Trigger Sharing</label>
    </sharingReasons>
</CustomObject>